@@ -16,6 +16,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.Collections;
 import java.util.stream.Collectors;
 
 @Service
@@ -32,7 +33,7 @@ public class RoleServiceImpl implements RoleService {
                 .description(role.getDescription())
                 .permissions(role.getPermissions() != null
                         ? role.getPermissions().stream().map(Permission::getCode).collect(Collectors.toList())
-                        : java.util.List.of())
+                        : Collections.emptyList())
                 .build();
     }
 
